2021-cloud-native-istio-security/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: foo-authorization-policy
  namespace: foo
  annotations:
    version: dev
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-*"
      to:
        - operation:
            ports:
              - "9080"
